# rgb2cmyk

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: converter.cpp  converter.h  main.cpp  stats.cpp  stats.h
